[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/Maps/Map.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Flag/Flag.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Font/LapsusPro-Bold.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Scenes/Levels/Level_2.gd" type="Script" id=5]
[ext_resource path="res://Assets/cursor.png" type="Texture" id=6]
[ext_resource path="res://Assets/arrow.png" type="Texture" id=7]
[ext_resource path="res://Assets/bcgLvl2.png" type="Texture" id=8]
[ext_resource path="res://Assets/SFX/L2.ogg" type="AudioStream" id=9]
[ext_resource path="res://Scenes/FontSpeedLabel.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="NavigationPolygon" id=3]
vertices = PoolVector2Array( 8, 16, 1008, 16, 1008, 576, 8, 576 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( 8, 16, 1008, 16, 1008, 576, 8, 576 ) ]

[node name="Level_2" type="Node2D"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 8 )
centered = false

[node name="Map" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" parent="Map/StaticBody2D" index="0"]
position = Vector2( 0, 304 )

[node name="CollisionShape2D2" parent="Map/StaticBody2D" index="1"]
position = Vector2( 1023, 304 )

[node name="CollisionShape2D3" parent="Map/StaticBody2D" index="2"]
position = Vector2( 512, 584 )

[node name="Flag" parent="." instance=ExtResource( 3 )]
position = Vector2( 864, 535 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="Arrows" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Arrows"]
position = Vector2( 784, 544 )
scale = Vector2( 0.392857, 0.392857 )
texture = ExtResource( 7 )

[node name="Sprite2" type="Sprite" parent="Arrows"]
position = Vector2( 792, 480 )
rotation = 0.523599
scale = Vector2( 0.392857, 0.392857 )
texture = ExtResource( 7 )

[node name="Sprite4" type="Sprite" parent="Arrows"]
position = Vector2( 944, 544 )
rotation = 3.14159
scale = Vector2( 0.392857, 0.392857 )
texture = ExtResource( 7 )

[node name="Sprite5" type="Sprite" parent="Arrows"]
position = Vector2( 936, 480 )
rotation = 2.35619
scale = Vector2( 0.392857, 0.392857 )
texture = ExtResource( 7 )

[node name="Sprite3" type="Sprite" parent="Arrows"]
position = Vector2( 864, 456 )
rotation = 1.5708
scale = Vector2( 0.392857, 0.392857 )
texture = ExtResource( 7 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 160, 544 )

[node name="ButtonControl" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 1024.0
margin_bottom = 192.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="ButtonControl"]
anchor_right = 1.0
margin_left = 80.0
margin_top = 64.0
margin_right = -88.0
margin_bottom = 560.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MouseCursor" type="Sprite" parent="."]
position = Vector2( 512, 304 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="."]
margin_left = 812.482
margin_top = 456.0
margin_right = 920.482
margin_bottom = 499.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.686275, 0.0235294, 1 )
text = "Jimmy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Navigation2D"]
navpoly = SubResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
autoplay = true

[node name="FontSpeedLabel" parent="." instance=ExtResource( 10 )]
position = Vector2( 808, 569.875 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Map"]
